<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.jamk.iot.WlanActivity">

    <VideoView
        android:id="@+id/videoScreen"
        android:layout_width="390dp"
        android:layout_height="330dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="1dp"
        app:layout_constraintHorizontal_bias="0.476" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/button4_txt"
        android:layout_marginBottom="-602dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginLeft="92dp" />

    <Button
        android:id="@+id/leftButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_txt"
        app:layout_constraintRight_toLeftOf="@+id/upButton"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upButton"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/downButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/downButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_txt"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/leftButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/rightButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upButton" />

    <Button
        android:id="@+id/upButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_txt"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoScreen"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/rightButton"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_txt"
        app:layout_constraintLeft_toRightOf="@+id/upButton"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/upButton"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/downButton"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.333"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/stop_txt"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/downButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.49" />

</android.support.constraint.ConstraintLayout>